Fixed error with logout and an issue where the bottom of text was cut off in the header.

--- a/resources/Styles/form.scss
+++ b/resources/Styles/form.scss
@@ -20,6 +20,9 @@
       margin-bottom: 10px;
       .radio-button{
         padding: 0 5px;
+        input{
+          margin: 0 3px;
+        }
       }
     }
     .selection_warning{
