--- a/resources/Styles/header.scss
+++ b/resources/Styles/header.scss
@@ -15,6 +15,7 @@
     justify-content: space-between;
     align-items: center;
     li{
+      line-height: 1.3;
       a{
         font-size: 1.3rem;
         color: black;
