--- a/resources/Styles/shows.scss
+++ b/resources/Styles/shows.scss
@@ -88,6 +88,7 @@
           margin: 0 auto 10px auto;
         }
         .loading{
+          margin-top: 5px;
           display: none;
           i{
             font-size: 24px;
